<resources>
    <string name="app_name">Notifikasi Kecelakaan</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">No Name</string>
    <string name="nav_header_subtitle">No Phone</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Notifikasi Kecelakaan</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Riwayat Kecelakaan</string>
    <string name="menu_tools">Pesan</string>
    <string name="menu_share">Undang Teman</string>
    <string name="menu_send">Pengaturan</string>
    <string name="google_maps_key">AIzaSyAiCKvJcTu95NxXaqUwAE2ntEITNzoCmPk</string>
    <string name="footer">Aplikasi Notifikasi Kecelakaan Lalu Lintas</string>
    <string name="menu_logout">Log Out</string>
    <string name="tv_jam">Jam</string>
    <string name="nama">Nama Respondent</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_lokasi">No Location</string>
    <string name="tv_waktu">No Time</string>
    <string name="tv_keterangan">No Address</string>
    <string name="menu_history">Riwayat Kecelakaan</string>
    <string name="menu_pesan">Pesan</string>
    <string name="tv_judul">Judul</string>
    <string name="tv_isi">Isi</string>
    <string name="tv_nama">Nama</string>
    <string name="tv_alamat">Alamat</string>
    <string name="tv_telp">Telepon</string>
    <string name="menu_polisi">Kantor Polisi</string>
    <string name="menu_rs">Rumah Sakit</string>
    <string name="text_name">No Name</string>
    <string name="text_address">No Address</string>
    <string name="text_phone">No Phone</string>
    <string name="text_time">No Time</string>
    <string name="text_share">Ajak teman untuk menggunakan \naplikasi notifikasi kecelakaan untuk mendapatkan\ninformasi terjadinya kecelakaan disekitar.</string>
    <string name="API_KEY">AIzaSyAiCKvJcTu95NxXaqUwAE2ntEITNzoCmPk</string>
    <string name="share_message">Install aplikasi Notifikasi Kecelakaan untuk mendapatkan notifikasi kecelakaan yang terjadi disekitar anda.\n\nDownload sekarang :\nhttps://drive.google.com/drive/folders/1-Y7fqc8BOyLw6x43xmW7Z6h7aydXvzUW?usp=sharing</string>
    <string name="status">Korban sedang dibawa ke Rumah Sakit Dr. Suotomo oleh Muhammad Fajar Ibrahim</string>
</resources>
