<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_notifications_active_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_image_black_24dp"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_polisi"
            android:icon="@drawable/ic_local_taxi_black_24dp"
            android:title="@string/menu_polisi" />
        <item
            android:id="@+id/nav_rs"
            android:icon="@drawable/ic_local_hospital_black_24dp"
            android:title="@string/menu_rs" />
        <item
            android:id="@+id/nav_riwayat"
            android:icon="@drawable/ic_history_black_24dp"
            android:title="@string/menu_slideshow" />

<!--        <item-->
<!--            android:id="@+id/nav_pesan"-->
<!--            android:icon="@drawable/baseline_message_black_18dp"-->
<!--            android:title="@string/menu_tools" />-->
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_group_black_24dp"
            android:title="@string/menu_share" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/menu_send" />
    </group>

</menu>
